feat: add /api/info GET endpoint + tags to OpenAPI spec
